// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manifest vs output: 00 - manifest 1`] = `
Object {
  "background": Object {
    "service_worker": "background.js",
    "type": "module",
  },
  "content_scripts": Array [
    Object {
      "js": Array [
        "assets/content.esm-wrapper-a6ac6bbe.js",
      ],
      "matches": Array [
        "http://b.com/*",
        "https://a.com/*",
      ],
    },
  ],
  "description": "integration tests",
  "manifest_version": 3,
  "name": "Test",
  "permissions": Array [],
  "version": "1.0.0",
  "web_accessible_resources": Array [
    Object {
      "matches": Array [
        "http://b.com/*",
        "https://a.com/*",
      ],
      "resources": Array [
        "dynamic-script.js",
        "content.js",
      ],
    },
    Object {
      "matches": Array [
        "http://*/*",
        "https://*/*",
      ],
      "resources": Array [
        "executed-script.js",
      ],
    },
  ],
}
`;

exports[`manifest vs output: 01 - files from manifest 1`] = `
Object {
  "CSS": Array [],
  "HTML": Array [],
  "IMAGE": Array [],
  "JSON": Array [],
  "SCRIPT_BACKGROUND": Array [
    "background.js",
  ],
  "SCRIPT_DECLARED": Array [
    "assets/content.esm-wrapper-a6ac6bbe.js",
  ],
}
`;

exports[`manifest vs output: 02 - files from output 1`] = `
Array [
  "assets/content.esm-wrapper-a6ac6bbe.js",
  "assets/dynamic-script.esm-wrapper-744b534a.js",
  "assets/executed-script.esm-wrapper-3454cf82.js",
  "background.js",
  "content.js",
  "dynamic-script.js",
  "executed-script.js",
  "manifest.json",
]
`;

exports[`manifest vs output: 03 - manifest files match output 1`] = `
Object {
  "assets/content.esm-wrapper-a6ac6bbe.js": true,
  "background.js": true,
}
`;

exports[`manifest vs output: assets/content.esm-wrapper-a6ac6bbe.js 1`] = `
"(function () {
  'use strict';

  const importPath = \\"content.js\\";

  const url = chrome.runtime.getURL(importPath);
  import(
    /* @vite-ignore */
    url
  ).catch((err) => {
    console.warn(\`Could not import \${importPath} from \${chrome.runtime.getManifest().name}\`);
    console.error(err);
  });

})();
"
`;

exports[`manifest vs output: assets/dynamic-script.esm-wrapper-744b534a.js 1`] = `
"(function () {
  'use strict';

  const importPath = \\"dynamic-script.js\\";

  const url = chrome.runtime.getURL(importPath);
  import(
    /* @vite-ignore */
    url
  ).catch((err) => {
    console.warn(\`Could not import \${importPath} from \${chrome.runtime.getManifest().name}\`);
    console.error(err);
  });

})();
"
`;

exports[`manifest vs output: assets/executed-script.esm-wrapper-3454cf82.js 1`] = `
"(function () {
  'use strict';

  const importPath = \\"executed-script.js\\";

  const url = chrome.runtime.getURL(importPath);
  import(
    /* @vite-ignore */
    url
  ).catch((err) => {
    console.warn(\`Could not import \${importPath} from \${chrome.runtime.getManifest().name}\`);
    console.error(err);
  });

})();
"
`;

exports[`manifest vs output: background.js 1`] = `
"var scriptFileName = \\"executed-script.js\\";

console.log(\\"service_worker.ts\\");
chrome.action.onClicked.addListener((tab) => {
  if (tab.id)
    chrome.scripting.executeScript({
      files: [scriptFileName],
      target: { tabId: tab.id }
    });
});
"
`;

exports[`manifest vs output: content.js 1`] = `
"var fileName = \\"dynamic-script.js\\";

console.log(\\"content script\\");
const script = document.createElement(\\"script\\");
script.src = chrome.runtime.getURL(fileName);
document.head.prepend(script);
"
`;

exports[`manifest vs output: dynamic-script.js 1`] = `
"console.log(\\"dynamic-script.ts\\");
"
`;

exports[`manifest vs output: executed-script.js 1`] = `
"console.log(\\"executed-script.ts\\");
"
`;
